--- a/package.json
+++ b/package.json
@@ -1,3 +1,7 @@
 {
-    "type": "module"
+    "type": "module",
+    "dependencies": {
+        "@google/generative-ai": "^0.24.1",
+        "dotenv": "^17.2.1"
+    }
 }
